FLXX-88: add swagger docs for bucket file endpoints
